[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-searchapi"
version = "0.1.0"
description = "An integration package connecting SearchApi.io and LangChain"
authors = ["Isaac Vander <isadohergar@gmail.com>"]
readme = "README.md"
repository = "https://github.com/axiom-of-choice/langchain-searchapi"
license = "MIT"
include = ["langchain_searchapi/py.typed"]

[tool.mypy]
disallow_untyped_defs = "True"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain-core = ">=0.3.0,<1.0.0"
aiohttp = ">=3.9.0"
requests = ">=2.28.0"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5.0"
mypy = ">=1.10.0"
types-requests = ">=2.31.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-socket = ">=0.7.0"
